added contact finding and groups (work in progress)

--- a/uchat-client-ui/uchat-client-ui/Views/MainWindow.axaml
+++ b/uchat-client-ui/uchat-client-ui/Views/MainWindow.axaml
@@ -19,6 +19,10 @@
         <DataTemplate DataType="{x:Type viewModels:ChatViewModel}">
             <views:ChatView />
         </DataTemplate>
+
+        <DataTemplate DataType="{x:Type viewModels:AddContactViewModel}">
+            <views:AddContactView />
+        </DataTemplate>
     </Window.DataTemplates>
     
     <ContentControl Content="{Binding CurrentView}" />
