--- a/uchat-client/Views/AddContactView.axaml
+++ b/uchat-client/Views/AddContactView.axaml
@@ -283,7 +283,7 @@
                                     HorizontalContentAlignment="Center"
                                     Click="UploadGroupPicture_Click">
                                 <StackPanel Orientation="Horizontal" Spacing="8">
-                                    <TextBlock Text="Upload the photo"
+                                    <TextBlock Text="Upload a photo"
                                                Foreground="#364D70"
                                                FontSize="14"
                                                VerticalAlignment="Center"/>
@@ -291,6 +291,8 @@
                                           Stretch="Uniform"
                                           Width="24"
                                           Height="24"
+                                          RenderTransform="scale(1,-1)"
+                                          Margin="0, 0, 0, 8"
                                           Data="{StaticResource CloudIcon}"/>
                                 </StackPanel>
                             </Button>
@@ -318,6 +320,7 @@
                         Height="56"
                         CornerRadius="28"
                         HorizontalContentAlignment="Center"
+                        VerticalContentAlignment="Center"
                         Command="{Binding CreateGroupCommand}"
                         Margin="0,16,0,0">
                     <Button.Styles>
