wire the authentication flow, and session management. fix server/client

--- a/uchat-client/App.axaml
+++ b/uchat-client/App.axaml
@@ -2,6 +2,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              x:Class="uchat_client.App"
              xmlns:local="using:uchat_client"
+             xmlns:conv="clr-namespace:uchat_client.Converters"
              RequestedThemeVariant="Default">
              <!-- "Default" ThemeVariant follows system theme variant. "Dark" or "Light" are other available options. -->
 
@@ -10,6 +11,7 @@
         <FontFamily x:Key="LibraFont">avares://uchat/Assets/Fonts/LibraSerifModern-Regular.otf#Libra Serif Modern</FontFamily>
         <FontFamily x:Key="LibraFontBold">avares://uchat/Assets/Fonts/LibraSerifModern-Bold.otf#Libra Serif Modern</FontFamily>
         <FontFamily x:Key="InterFont">Inter</FontFamily>
+        <conv:BooleanToStringConverter x:Key="BooleanToStringConverter" />
     </Application.Resources>
 
     <Application.DataTemplates>
