--- a/uchat-client/Views/RegistrationView.axaml
+++ b/uchat-client/Views/RegistrationView.axaml
@@ -103,6 +103,14 @@
                             
                         </StackPanel>
 
+                        <!-- Error Message -->
+                        <TextBlock Text="{Binding ErrorMessage}"
+                                   Foreground="#FF0000"
+                                   FontWeight="Bold"
+                                   IsVisible="{Binding ErrorMessage, Converter={x:Static StringConverters.IsNotNullOrEmpty}}"
+                                   TextWrapping="Wrap"
+                                   Margin="0,5,0,0"/>
+
                         <Grid Margin="0,10,0,0">
         
                             <Button Content="Back"
@@ -126,6 +134,7 @@
                             <Button Content="Register"
                                     FontFamily="{StaticResource LibraFontBold}"
                                     Command="{Binding RegisterCommand}"
+                                    IsEnabled="{Binding !IsLoading}"
                                     HorizontalAlignment="Right"
                                     HorizontalContentAlignment="Center"
                                     VerticalContentAlignment="Center"
