--- a/uchat-client/Views/SettingsView.axaml
+++ b/uchat-client/Views/SettingsView.axaml
@@ -132,6 +132,37 @@
                         </Grid>
                     </Button>
 
+                    <!-- Logout Section -->
+                    <Button Height="64"
+                            CornerRadius="30"
+                            Background="#E06C75"
+                            HorizontalAlignment="Stretch"
+                            HorizontalContentAlignment="Stretch"
+                            Padding="24,0"
+                            Command="{Binding LogoutCommand}">
+                        <Button.Styles>
+                            <Style Selector="Button:pointerover /template/ ContentPresenter">
+                                <Setter Property="Background" Value="#EA7B84"/>
+                            </Style>
+                        </Button.Styles>
+                        <Grid ColumnDefinitions="*,Auto">
+                            <TextBlock Grid.Column="0"
+                                       Text="Logout"
+                                       FontSize="20"
+                                       FontWeight="SemiBold"
+                                       FontFamily="{StaticResource LibraFont}"
+                                       Foreground="#364D70"
+                                       VerticalAlignment="Center" />
+                            <Path Grid.Column="1"
+                                  Fill="#364D70"
+                                  Stretch="Uniform"
+                                  Width="28"
+                                  Height="28"
+                                  VerticalAlignment="Center"
+                                  Data="{StaticResource ChevronRightIcon}"/>
+                        </Grid>
+                    </Button>
+
                 </StackPanel>
             </ScrollViewer>
         </Grid>
