Added Contact/Friend list + block/add to contacts etc.

--- a/uchat-client/Views/MainWindow.axaml
+++ b/uchat-client/Views/MainWindow.axaml
@@ -23,6 +23,11 @@
         <DataTemplate DataType="{x:Type viewModels:AddContactViewModel}">
             <views:AddContactView />
         </DataTemplate>
+
+        <!-- NEW: Contact/Friend List View -->
+        <DataTemplate DataType="{x:Type viewModels:ContactFriendListViewModel}">
+            <views:ContactFriendListView />
+        </DataTemplate>
         
     </Window.DataTemplates>
 
