--- a/uchat-client/App.axaml
+++ b/uchat-client/App.axaml
@@ -1,3 +1,5 @@
+<!-- App.axaml -->
+
 <Application xmlns="https://github.com/avaloniaui"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              x:Class="uchat_client.App"
